# meta-json-parser

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  LICENCE.md  README.md
benchmark/: checkpoint_results.cpp  data_def.cuh  generate_and_compile.sh  generate_types_bench.py  main.cu  run_benchmarks.py  run_benchmarks_all_types.sh  run_benchmarks_grid.sh  run_benchmarks_types.sh
benchmark/examples/: README.md  bool.data_def.cuh  bool1.data_def.cuh  bool1_10.json  bool1a.data_def.cuh  bool1a_10.json  bool1bool.data_def.cuh  bool2.data_def.cuh  bool2_10.json  bool2a.data_def.cuh  bool2a_10.json  bool3a.data_def.cuh  bool3a_10.json  bool_10.json  datetime.data_def.cuh  datetime.json  datetime_as_string.data_def.cuh  float.data_def.cuh  float.json  nested-depth=1.data_def.cuh  nested-depth=2.data_def.cuh  nested-depth=3.data_def.cuh  nested-depth=4.data_def.cuh  nested-depth=5.data_def.cuh  nested-fakedepth=5.data_def.cuh  nested.data_def.cuh  nested.json  nested_pos.data_def.cuh  paper_demo.data_def.cuh  paper_demo.json  sample-first_5_fields.data_def.cuh  sample-last_5_fields.data_def.cuh  sample_10.json  sample_for_demo.data_def.cuh  sample_for_demo_10.jsonl  strings.data_def.cuh  strings.json  strings_nullable.data_def.cuh  uint.data_def.cuh  uint.json  (+2 more)
benchmark/notebooks/: .gitattributes  .gitconfig_nbdev  README.md  benchmark.csv  benchmark_libcudf-cudf=21.10-docker_generated_1M.csv  benchmark_libcudf-cudf=21.10-docker_sample-first_5_fields-1M.csv  benchmark_libcudf_cudf=21.10-docker_bool.csv  benchmark_libcudf_cudf=21.10-docker_bool1.csv  benchmark_libcudf_cudf=21.10-docker_bool1a.csv  benchmark_libcudf_cudf=21.10-docker_bool1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_bool2.csv  benchmark_libcudf_cudf=21.10-docker_bool2a.csv  benchmark_libcudf_cudf=21.10-docker_bool3a.csv  benchmark_libcudf_cudf=21.10-docker_bool_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_datetime.csv  benchmark_libcudf_cudf=21.10-docker_datetime1a.csv  benchmark_libcudf_cudf=21.10-docker_datetime1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_datetime_as_string1a.csv  benchmark_libcudf_cudf=21.10-docker_datetime_as_string1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_datetime_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_fixed1a.csv  benchmark_libcudf_cudf=21.10-docker_fixed1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_float.csv  benchmark_libcudf_cudf=21.10-docker_float1a.csv  benchmark_libcudf_cudf=21.10-docker_float1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_integer1a.csv  benchmark_libcudf_cudf=21.10-docker_integer1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_multisample_choinka.csv  benchmark_libcudf_cudf=21.10-docker_nullable_string1a.csv  benchmark_libcudf_cudf=21.10-docker_nullable_string1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_string1a.csv  benchmark_libcudf_cudf=21.10-docker_string1a_dtypes.csv  benchmark_libcudf_cudf=21.10-docker_strings.csv  benchmark_libcudf_cudf=21.10-docker_uint.csv  benchmark_libcudf_cudf=unknown_choinka.csv  benchmark_libcudf_cudf=unknown_samples=12_choinka.csv  benchmark_metaparser-assumptions=const_ws=32_static-cudf=21-10-docker_generated_1M.csv  benchmark_metaparser-assumptions=no_skip_ws=32_static-cudf=21-10-docker_generated_1M.csv  benchmark_metaparser-assumptions=none-ws=32_static-cudf=21.10-docker_sample-first_5_fields-1M.csv  benchmark_metaparser-assumptions=none_ws=32_static-cudf=21-10-docker_generated_1M.csv  (+73 more)
demo/: Makefile  README.md  json2cuda.py  meta_def.cuh  reddit.json  reddit.schema
include/meta_json_parser/: action_iterator.h  byte_algorithms.h  checkpoint_results.cpp  checkpoint_results.h  config.h  cub_wrapper.cuh  cuda_wrapper.cuh  debug_helpers.cpp  debug_helpers.cuh  debug_helpers.h  intelisense_silencer.h  json_parse.cuh  kernel_context.cuh  kernel_launch_configuration.cuh  kernel_launcher.cuh  memory_configuration.h  memory_request.h  meta_math.h  meta_memory_manager.cuh  meta_utils.h  mp_string.h  output_manager.cuh  output_printer.cuh  parse.cuh  parser_configuration.h  parser_input.h  parser_kernel.cuh  parser_output_device.cuh  parser_output_host.cuh  parser_requirements.cuh  runtime_configuration.cuh  static_buffer.h  strided_range.cuh  work_group_reader.cuh
include/meta_json_parser/action/: jarray.cuh  jbool.cuh  jdict.cuh  jnumber.cuh  jrealnumber.cuh  jstring.cuh  jstring_custom.cuh  skip_action.cuh  void_action.cuh
include/meta_json_parser/filtering/: block_filter.cuh  cascade.hpp  gpu_filter.cuh  thread_filter.cuh
include/meta_json_parser/json_parsers/: datetime.cuh  datetime_token_parser.h  float.cuh  skip.cuh  stack_token.cuh
include/meta_json_parser/memory/: allocator.h  config.h  config_transform.h  pool.h
include/meta_json_parser/meta_utility/: is_base_of_template.h  length_representation.h  map_utility.h  metastring.h  option_getter.cuh  real_number.cuh  safe_drop.h
meta_cudf/: parser.cu  parser.cuh
meta_cudf/opt1/: meta_def.cuh
paper_demo/: cudf_benchmark.py  pandas_benchmark.py  small_sample_data.json
python_binding/: Makefile  cudf_benchmark.py  generate_dataframe.cpp  generate_dataframe.h  meta_benchmark.py  metajsonparser.pyx  pandas_benchmark.py  setup.py  test.py  test.pyx
python_binding/test/: sample_2000.json  test.py
src/: config.h  kernel_launcher.cuh  parser_kernel.cuh  parsing_error.h  runtime_configuration.cuh  static_buffer.h  work_group_reader.cuh
test/: book_json.cu  cut.cu  keywriter_tests.cu  main.cu  minmax.cu  parse_dynamic_output.cu  parse_dynamic_string.cu  parse_jarray.cu  parse_jbool.cu  parse_jdatetime.cu  parse_jdict.cu  parse_jnumber.cu  parse_jrealnumber.cu  parse_jstring.cu  parse_jstring_custom.cu  parse_jstring_hash_matcher.cu  parse_jstring_transform.cu  parse_uint_test.cu  read_only_buffer_test.cu  round.cu  skip.cu  test_configuration.h  test_helper.h  test_memory_config.cu  to_bool.cu  uint_test_context.cuh  work_group_reader_test.cu
test/test_utility/: operators.cuh  test_launcher.cu  test_launcher.cuh
test/test_utility/contexts/: datetime_test_context.cuh  floating_point_test_context.cuh  (+10 more)
(+11 files in other folders)
